[package]
name = "onsocialrelayer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.11.0"
near-crypto = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.5.7", features = ["unstable__schema"] }
near-sdk-macros = "5.11.0"
getrandom = { version = "0.2.15", default-features = false, features = ["custom"] }

[dev-dependencies]
near-sdk = { version = "5.11.0", features = ["unit-testing"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false
panic = "abort"
overflow-checks = true