[package]
name = "onsocialrelayer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.11.0"
near-crypto = "0.29.2"
near-parameters = "0.29.2"
ed25519-dalek = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.5.7", features = ["unstable__schema"] }
getrandom = { version = "0.2.15", features = ["custom"] }
near-sdk-macros = "5.11.0"

[dev-dependencies]
near-sdk = { version = "5.11.0", features = ["unit-testing"] }
near-crypto = "0.29.2"
cargo-near = "0.13.6"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false
panic = "abort"
overflow-checks = true
